--- a/Containment-Zone-Alert-spring-boot/src/main/resources/application.properties
+++ b/Containment-Zone-Alert-spring-boot/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=9pBY9NdJr1
-spring.datasource.password=nO9pqZk8lv
+spring.datasource.password=dWKcZ6hbIF
 spring.datasource.url=jdbc:mysql://remotemysql.com:3306/9pBY9NdJr1
-spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.mysql.MySQL56SpatialDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
+spring.jpa.database-platform = org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
