--- a/ContainmentZoneAlertApp/app/src/main/AndroidManifest.xml
+++ b/ContainmentZoneAlertApp/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.saravana.containmentzonealertapp">
-    <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.ContainmentZoneAlertApp">
-        <activity android:name=".RegisterActivity"></activity>
+        android:theme="@style/Theme.ContainmentZoneAlertApp"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
