--- a/ContainmentZoneAlertApp/app/src/main/AndroidManifest.xml
+++ b/ContainmentZoneAlertApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +16,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ContainmentZoneAlertApp"
         android:usesCleartextTraffic="true">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDzg5x_NCI9Rzc2-dOxzJ1_MhSt86zrvMM" />
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
         <activity android:name=".HomeActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
@@ -22,6 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".LocationUpdateService" android:foregroundServiceType="location"/>
     </application>
 
 </manifest>
